# BrainGenix-API

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
CI/: .gitlab-ci.yml
CI/Deploy/: Prod.yml
CI/Images/BuildLinuxDebian10/: BuildImage.sh  Dockerfile  PushImage.sh
CI/Images/BuildLinuxDebian11/: BuildImage.sh  Dockerfile  PushImage.sh
CI/Images/BuildLinuxUbuntu20.04/: BuildImage.sh  Dockerfile  PushImage.sh
CI/Images/BuildLinuxUbuntu22.04/: BuildImage.sh  Dockerfile  PushImage.sh
CI/Images/BuildLinuxUbuntu23.04/: BuildImage.sh  Dockerfile  PushImage.sh
CI/Package/Debian11/: CI.yml
CI/Package/Debian12/: CI.yml
CI/Package/Ubuntu2004/: CI.yml
CMake/: SuperBuildMaster.cmake
CMake/SuperBuilds/: API.cmake  Assimp.cmake  Boost.cmake  ERS.cmake  FreeImage.cmake  LuaJIT.cmake  Lucifer.cmake  MeshOptimizer.cmake  OZZAnimation.cmake  OatPP-Postgresql.cmake  OatPP-Swagger.cmake  OatPP.cmake  Oatpp.cmake  Restbed.cmake  ThreadNamingUtils.cmake  YAMLCPP.cmake  cpp-httplib.cmake  evpp.cmake
Docs/: API.md  MacOS.md  NESAPI.md  README.md  StatusPage.md  UpstreamNESAPI.md
Source/: Main.cpp
Source/Core/: ApplicationComponent.cpp  ApplicationComponent.h  CMakeLists.txt  Main.cpp  Main.h
Source/Core/Cluster/: BidirectionalRPC.cpp  BidirectionalRPC.h
Source/Core/Cluster/VSDA/: VSDAConnectionManager.cpp  VSDAConnectionManager.h
Source/Core/Config/: ArgumentHandler.cpp  ArgumentHandler.h  ArgumentParser.cpp  ArgumentParser.h  Config.h  ConfigDefaults.cpp  ConfigDefaults.h  ConfigFileParser.cpp  ConfigFileParser.h  ConfigManager.cpp  ConfigManager.example.cpp  ConfigManager.h  ConfigParser.cpp  ConfigParser.h  ConfigParser.test.cpp  ConfigurationManager.cpp  ConfigurationManager.h  users.json
Source/Core/ConfigParser/: ArgumentHandler.cpp  ArgumentHandler.h  ConfigurationManager.h
Source/Core/Controller/: APIController.cpp  APIController.h
Source/Core/DTO/: DataTransferObjects.cpp  DataTransferObjects.h  README.md
Source/Core/Database/: DBManager.cpp  DBManager.h
Source/Core/NeuroglancerWrapper/: NeuroglancerWrapper.cpp  NeuroglancerWrapper.h
Source/Core/RPC/: APIStatusCode.cpp  APIStatusCode.h  ClientManager.cpp  ClientManager.h  ManagerTaskData.cpp  ManagerTaskData.h  RPCHandlerHelper.cpp  RPCHandlerHelper.h  RPCManager.cpp  RPCManager.h  RouteAndHandler.cpp  RouteAndHandler.h  StaticRoutes.cpp  StaticRoutes.h
Source/Core/Resource/: AppComponents.h  Controller.h  DTO.h  Endpoints.cpp  Endpoints.h  Forbidden.h  Hello copy.cpp  Hello.cpp  Hello.h  NotFound.h  Root.cpp  Root.h  Status.cpp  Status.h  Version.cpp  Version.h
Source/Core/Resource/Auth/: GetToken.cpp  GetToken.h
Source/Core/Resource/CentralizedRequestHandler/: CentralizedRequestHandler.cpp  CentralizedRequestHandler.h  CentralizedRequestHandler.test.cpp
Source/Core/Resource/Dataset/: Dataset.cpp  Dataset.h
Source/Core/Resource/EVM/: EVM.cpp  EVM.h
Source/Core/Resource/NES/: BSCreate.cpp  BSCreate.h  BoxCreate.cpp  BoxCreate.h  BulkBSCreate.cpp  BulkBSCreate.h  BulkSphereCreate.cpp  CylinderCreate.cpp  CylinderCreate.h  NES.cpp  NES.h  NeuronCreate.cpp  NeuronCreate.h  PatchClampADCCreate.cpp  PatchClampADCCreate.h  PatchClampADCGetRecordedData.cpp  PatchClampADCGetRecordedData.h  PatchClampADCSetSampleRate.cpp  PatchClampADCSetSampleRate.h  PatchClampDACCreate.cpp  PatchClampDACCreate.h  PatchClampDACSetOutputList.cpp  PatchClampDACSetOutputList.h  ReceptorCreate.cpp  ReceptorCreate.h  SimulationBuildMesh.cpp  SimulationBuildMesh.h  SimulationCreate.cpp  SimulationCreate.h  SimulationGetRecording.cpp  SimulationGetRecording.h  SimulationGetStatus.cpp  SimulationGetStatus.h  SimulationRecordAll.cpp  SimulationRecordAll.h  SimulationReset.cpp  SimulationReset.h  SimulationRunFor.cpp  SimulationRunFor.h  SphereCreate.cpp  (+3 more)
Source/Core/Resource/NES/Debug/: Debug.cpp  Debug.h
Source/Core/Resource/NES/Geometry/Shape/: BoxCreate.cpp  BoxCreate.h  BulkBoxCreate.cpp  BulkBoxCreate.h  BulkCylinderCreate.cpp  BulkCylinderCreate.h  BulkSphereCreate.cpp  BulkSphereCreate.h  CylinderCreate.cpp  CylinderCreate.h  SphereCreate.cpp  SphereCreate.h
Source/Core/Resource/NES/VSDA/: EMDefineScanRegion.cpp  EMDefineScanRegion.h  EMGetImage.cpp  EMGetImage.h  EMGetImageStack.cpp  EMGetImageStack.h  EMGetRenderStatus.cpp  EMGetRenderStatus.h  EMInitialize.cpp  EMInitialize.h  EMQueueRenderOperation.cpp  EMQueueRenderOperation.h  EMSetupMicroscope.cpp  EMSetupMicroscope.h
Source/Core/Resource/NES/VSDA/Calcium/: CreateIndicator.cpp  CreateIndicator.h  CreateIndictor.cpp  DefineScanRegion.cpp  DefineScanRegion.h  GetImage.cpp  GetImage.h  GetImageStack.cpp  GetImageStack.h  GetRenderStatus.cpp  GetRenderStatus.h  QueueRenderOperation.cpp  QueueRenderOperation.h  Setup.cpp  Setup.h
Source/Core/Resource/NES/VSDA/EM/: DefineScanRegion.cpp  DefineScanRegion.h  GetImage.cpp  GetImage.h  GetImageStack.cpp  GetImageStack.h  GetRenderStatus.cpp  GetRenderStatus.h  Initialize.cpp  Initialize.h  QueueRenderOperation.cpp  QueueRenderOperation.h  SetupMicroscope.cpp  SetupMicroscope.h
Source/Core/Resource/NES/Visualizer/: RenderImage.cpp  RenderImage.h
Source/Core/Resource/Route/: Hello.cpp  Hello.h
Source/Core/Resource/VSDA/: ClusterRPC.cpp  ClusterRPC.h  IPDetector.cpp  IPDetector.h  VSDA.cpp  VSDA.h  VSDAManager.cpp  VSDAManager.h
Source/Core/Server/: Controller.cpp  Controller.h  Endpoints.cpp  Endpoints.h  ResourceManager.cpp  ResourceManager.h  Server.h
Source/Core/Util/: JWTUtil.hpp  ParamCheck.cpp  ParamCheck.h  RPCHelpers.cpp  RPCHelpers.h  RestbedHelpers.cpp  RestbedHelpers.h  Types.h
Source/Data/: API.cfg  API.yaml  BrainGenix-API.service  PostInstall.sh  postinst
Source/Internal/: README.md
Test/: HappyHolidays.py  Test.py  TestLocal.py
Tools/: Build.sh  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DevRun.sh  Install.sh  Makefile  NewBuild.sh  Run.sh  Setup-OSX.sh  Setup.sh  SetupDeps.sh  cmake_install.cmake
Tools/Deploy/: Deploy.sh
Tools/Docs/: GenerateDoxygen.sh
agent notes/: agent-session-notes-2026-05-09.md  mac-silicon-change-log.md
(+37 files in other folders)
